# pydantic_with_psycopg

./: LICENSE.txt  README.md  main.py  pyproject.toml
db/: schema.sql
src/: crud.py  models.py  statements.py
